# webtoolkitex

./: Makefile  README.md  manual_test.py  pyproject.toml
tests/: __init__.py  test_baseurl.py  test_contentinterface.py  test_contentlinkparser.py  test_contenttext.py  test_crawlerinterface.py  test_defaulthandler.py  test_domaincache.py  test_handlerhttp.py  test_handlerodysee.py  test_handlers.py  test_handleryoutube.py  test_htmlpage.py  test_opmlpage.py  test_pagerequest.py  test_pageresponse.py  test_remoteserver.py  test_remoteurl.py  test_rsspage.py  test_statuses.py  test_urlagemoderator.py  test_urllocation.py  test_urlpropertyvalidator.py  test_webtools.py
tests/real/: test_real.py
tests/unit/: test_handlerodysee.py  test_handleryoutube.py  test_urlex.py  test_webconfig.py
webtoolkitex/: __init__.py  entryrules.py  url.py  urlex.py  webconfig.py
webtoolkitex/crawlers/: __init__.py  curlcffi.py  httpmorph.py  httpx.py  stealth.py  ytdlp.py
webtoolkitex/handlers/: __init__.py  handlerchannelyoutube.py  handlervideoyoutube.py
webtoolkitex/utils/programwrappers/: ytdlp.py  ytdownloader.py
webtoolkitex/utils/serializers/: __init__.py  youtubelinkjson.py
